--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "drive",
+  "name": "Projeto-Json",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "json-server": "^0.17.0"
-  }
+  "repository": "https://github.com/BryanSimoes/Projeto-Json.git",
+  "author": "bryan <Bryansk07@hotmail.com>",
+  "license": "MIT"
 }
